Add relation and transition API extensions
